--- a/themes/stephenroberts/source/css/_critical.styl
+++ b/themes/stephenroberts/source/css/_critical.styl
@@ -104,7 +104,7 @@ p {
   top: 0;
   z-index: 1;
   width: 100%;
-  background-color: rgba(44,62,80);
+  background-color: #2c3e50;
   color: white;
   text-transform: uppercase;
 }
@@ -164,7 +164,7 @@ p {
 #nav-bar .menu {
   border-top: 1px solid white;
   list-style: none;
-  background-color: rgba(44,62,80);
+  background-color: #2c3e50;
 }
 
 /* Reveal Menu with Pure CSS */
@@ -193,6 +193,20 @@ p {
 
 @media (min-width: 1000px) {
 
+  #nav-bar .menu-container {
+    position: relative;
+  }
+
+  #nav-toggle-checkbox:checked~.menu-container {
+    transform: none;
+    transition: none;
+  }
+
+  #nav-toggle-checkbox~.menu-container .menu {
+    transform: none;
+    transition: none;
+  }
+
   /* Layout the avatar with the nav menu instead of the button */
   #nav-bar .container {
     display: flex;
@@ -200,10 +214,6 @@ p {
     align-items: center;
   }
 
-  /* Remove the layout for the menu button */
-  #nav-bar .layout-container {
-    display: block;
-  }
 
   #nav-bar .toggle-btn {
     display: none;
