feat: update skills

--- a/themes/stephenroberts/layout/_partial/nav.ejs
+++ b/themes/stephenroberts/layout/_partial/nav.ejs
@@ -1,6 +1,6 @@
 <div id="nav-bar">
   <div class="container">
-    <div class="avatar"><a href="#"><img alt="avatar" src="images/_avatar2x.png" /></a></div>
+    <div class="avatar"><a href="#"><img alt="avatar" src="images/_stephen2x.jpg" /></a></div>
     <label for="nav-toggle-checkbox" id="nav-toggle-btn" class="toggle-btn"><img alt="nav button" src="images/_menu2x.png" /></label>
     <input id="nav-toggle-checkbox" type="checkbox" />
     <div class="menu-container">
