feat: replace volunteer with environment

--- a/themes/stephenroberts/source/css/_critical.css
+++ b/themes/stephenroberts/source/css/_critical.css
@@ -54,6 +54,11 @@ p {
 .section:nth-child(odd) {
   background-color: white;
 }
+
+.section:nth-child(odd) a {
+  color: #246ab4;
+}
+
 .section:nth-child(even) {
   background-color: #246ab4;
   color: white;
