--- a/themes/stephenroberts/source/css/main.css
+++ b/themes/stephenroberts/source/css/main.css
@@ -152,6 +152,10 @@ blockquote::after {
   }
 }
 
+#environment-section .container {
+  text-align: center;
+}
+
 #socials {
   display: flex;
   justify-content: space-around;
