--- a/themes/stephenroberts/layout/index.ejs
+++ b/themes/stephenroberts/layout/index.ejs
@@ -3,6 +3,6 @@
 <%- partial('_partial/skills') %>
 <%- partial('_partial/experience') %>
 <%- partial('_partial/education') %>
-<%- partial('_partial/volunteer') %>
+<%- partial('_partial/environment') %>
 <%- partial('_partial/references') %>
 <%- partial('_partial/contact') %>
