feat: add print styles

--- a/themes/stephenroberts/layout/_partial/references.ejs
+++ b/themes/stephenroberts/layout/_partial/references.ejs
@@ -9,6 +9,7 @@
           <div class="indent">-- <%= reference.name %></div>
         </div>
       <% }) %>
+      <p class="print">Available upon request</p>
     </div> <!-- end container -->
   </div> <!-- end section -->
 <% } %>
