--- a/themes/stephenroberts/layout/_partial/contact.ejs
+++ b/themes/stephenroberts/layout/_partial/contact.ejs
@@ -1,3 +1,4 @@
+<span></span>
 <div id="contact-section" class="section">
   <a id="contact-anchor" class="anchor"></a>
   <div class="container">
@@ -22,4 +23,3 @@
 
   </div> <!-- end container -->
 </div> <!-- end section -->
-
