--- a/themes/stephenroberts/layout/_partial/skills.ejs
+++ b/themes/stephenroberts/layout/_partial/skills.ejs
@@ -7,16 +7,28 @@
     <% for (group in theme.skills) { %>
       <div class="group-container">
         <h3 class="group-title"><%= group %></h3>
-          <div class="list">
-            <% for (skill in theme.skills[group]) { %>
-              <div class="skill <%= skill %>">
-                <div class="icon-container">
-                  <img class="icon" alt="<%= theme.skills[group][skill] %>" src="images/_skills/<%= skill %>2x.png" />
-                </div>
-                <div class="label"><%= theme.skills[group][skill] %></div>
+        <div class="list">
+        <% for (skill in theme.skills[group]) { %>
+          <% if (!theme.skills[group][skill].name) { %>
+            <div class="skill <%= skill %>">
+              <div class="icon-container">
+                <img class="icon" alt="<%= theme.skills[group][skill] %>" src="images/_skills/<%= skill %>2x.png" />
               </div>
-            <% } %>
-          </div>
+              <div class="label"><%= theme.skills[group][skill] %></div>
+            </div>
+          <% } %>
+        <% } %>
+        </div>
+        <ul class="skill-list">
+        <% for (skill in theme.skills[group]) { %>
+          <% if (theme.skills[group][skill].name) { %>
+            <li>
+              <strong><%= theme.skills[group][skill].name %>:&nbsp;</strong>
+              <%= theme.skills[group][skill].tools%>
+            </li>
+          <% } %>
+        <% } %>
+        </ul>
       </div>
     <% } %>
     </div>
